--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,8 @@ spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 spring.datasource.url = jdbc:mysql://43.202.116.172:3306/weatherDB?serverTimezone=UTC&characterEncoding=UTF-8
 spring.datasource.username = testDB_admin
 spring.datasource.password = 1234
+spring.jpa.show-sql = true
+spring.jpa.database = mysql
 
 
 
