CRUD 구현, 트랜잭션 설정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.datasource.username = testDB_admin
 spring.datasource.password = 1234
 spring.jpa.show-sql = true
 spring.jpa.database = mysql
+openweathermap.key = ca2af8dd064cbd6901aba4412c84c442
 
 
 
