로그 기능 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.password = 1234
 spring.jpa.show-sql = true
 spring.jpa.database = mysql
 openweathermap.key = ca2af8dd064cbd6901aba4412c84c442
-
+logging.config = classpath:logback-spring.xml
 
 
 
