--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,17 @@ spring.jpa.show-sql = true
 spring.jpa.database = mysql
 openweathermap.key = ca2af8dd064cbd6901aba4412c84c442
 logging.config = classpath:logback-spring.xml
+spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
 
+# Swagger springdoc-ui Configuration
+springdoc.packages-to-scan=zerobase.Weather
+springdoc.default-consumes-media-type=application/json;charset=UTF-8
+springdoc.default-produces-media-type=application/json;charset=UTF-8
+springdoc.swagger-ui.path=swagger-ui.html
+springdoc.swagger-ui.tags-sorter=alpha
+springdoc.swagger-ui.operations-sorter=alpha
+springdoc.api-docs.path=/api-docs/json
+springdoc.api-docs.groups.enabled=true
+springdoc.cache.disabled=true
 
 
